--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -22,6 +23,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-image: url('./bg.svg');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-blend-mode: soft-light;
+  background-size: 60%;
+  
 }
 
 .App-link {
@@ -35,4 +42,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+p{
+  font-size: 100px;
+  font-family:cursive;
+  color: darkorange;
 }
