--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,32 @@
 .App {
   text-align: center;
-  
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+ 
+
   font-size: calc(10px + 2vmin);
   color: white;
+
   background-image: url('./bg.svg');
   background-repeat: no-repeat;
-  background-position: bottom;
-  background-blend-mode: soft-light;
-  background-size: 60%;
+  background-position: 100% 100%;
+  background-blend-mode:lighten;
+  background-size: calc(500px + 10vmin);
+  
   
 }
 
-.App-link {
-  color: #61dafb;
+.App .logo{
+  
+  font-size: calc(80px + 2vmin);
+  text-shadow: 2px 2px darkorange;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-p{
-  font-size: 100px;
-  font-family:cursive;
-  color: darkorange;
-}
+
+
