--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -1,3 +1,11 @@
 input{
-    margin: 10px;
+    font-size: 30px; 
+    border-radius: 10px;
+}
+button{
+    font-size: 20px;
+    padding: 5px;
+    margin: 20px;
+    border-radius: 10px;
+    cursor: pointer;
 }
